--- a/configs/local.config
+++ b/configs/local.config
@@ -2,7 +2,7 @@ process {
     withName:prodrugz {
         cpus=1
         container = 'mpgagebioinformatics/drugz:eb15d34'
-        containerOptions = "-v ${params.output_drugz}:${params.output_acer} -v  ${params.ouput_mageck_count}:${params.ouput_mageck_count}"
+        containerOptions = "-v ${params.output_acer}:${params.output_acer} -v  ${params.output_mageck_count}:${params.output_mageck_count}"
     }
 }
 
