--- a/configs/local.config
+++ b/configs/local.config
@@ -1,5 +1,5 @@
 process {
-    withName:prodrugz {
+    withName:proacer {
         cpus=1
         container = 'mpgagebioinformatics/drugz:eb15d34'
         containerOptions = "-v ${params.output_acer}:${params.output_acer} -v  ${params.output_mageck_count}:${params.output_mageck_count}"
