--- a/configs/slurm.config
+++ b/configs/slurm.config
@@ -1,5 +1,5 @@
 process {
-    withName:prodrugz {
+    withName:proacer {
         executor='slurm'
         queue="${params.queue}"
         cpus=1
