--- a/configs/local.config
+++ b/configs/local.config
@@ -1,7 +1,7 @@
 process {
     withName:proacer {
         cpus=1
-        container = 'mpgagebioinformatics/drugz:eb15d34'
+        container = 'mpgagebioinformatics/acer-7a0ffa4'
         containerOptions = "-v ${params.output_acer}:${params.output_acer} -v  ${params.output_mageck_count}:${params.output_mageck_count}"
     }
 }
