--- a/configs/slurm.config
+++ b/configs/slurm.config
@@ -5,7 +5,7 @@ process {
         cpus=1
         memory='20GB'
         time='1h'
-        container = "${params.image_folder}drugz-eb15d34.sif"
+        container = "${params.image_folder}acer-7a0ffa4.sif"
         containerOptions = "${params.extra_mounts} -B ${params.output_acer}:${params.output_acer} -B ${params.output_mageck_count}:${params.output_mageck_count}"
     }
 }
