--- a/configs/local.config
+++ b/configs/local.config
@@ -2,7 +2,7 @@ process {
     withName:proacer {
         cpus=1
         container = 'mpgagebioinformatics/acer-7a0ffa4'
-        containerOptions = "-v ${params.output_acer}:${params.output_acer} -v  ${params.output_mageck_count}:${params.output_mageck_count}"
+        containerOptions = "--user ${params.user} -v ${params.output_acer}:${params.output_acer} -v  ${params.output_mageck_count}:${params.output_mageck_count}"
     }
 }
 
